refactor: use instance-based DBConnection and add Main class for testing